# Mikasa

./: .gitignore  README.md  chat_with_mikasa.py  chat_with_mikasa_voice.py  config.yaml  prepare_data.py  pyproject.toml  requirements.txt  run_mikasa.sh  train_mikasa.py  upload_model.py
data/processed/mikasa_dataset/: .gitattributes  README.md
